--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 <main>
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<img id="flecheGauche" class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="Flêche de gauche">
-		<img id="flecheDroite" class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="Flêche de droite">
-		<p>Impressions tous formats <span>en boutique et en ligne</span></p>		
-		<div class="dots" id="dotsContainer">
+		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		<div class="dots">
 		</div>
 	</div>
 	<section id="about-us" class="container">
